--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   path: ^1.8.3
   image_picker: ^1.0.4
   intl: ^0.18.1
+  dio: ^5.3.3
+  dio_cookie_manager: ^3.1.1
+  cookie_jar: ^4.0.8
 
 dev_dependencies:
   flutter_test:
