--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,17 +31,22 @@ dependencies:
   flutter:
     sdk: flutter
   sqflite: ^2.3.0
-  provider: ^6.0.5
   path: ^1.8.3
   image_picker: ^1.0.4
   intl: ^0.18.1
   dio: ^5.3.3
   dio_cookie_manager: ^3.1.1
   cookie_jar: ^4.0.8
+  mobx: ^2.1.3
+  flutter_mobx: ^2.0.6+5
+  provider: ^6.0.5
+  flutter_slidable: ^3.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.3.3
+  mobx_codegen: ^2.1.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
