--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_mobx: ^2.0.6+5
   provider: ^6.0.5
   flutter_slidable: ^3.0.0
+  window_manager: ^0.3.7
 
 dev_dependencies:
   flutter_test:
