--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   provider: ^6.0.5
   flutter_slidable: ^3.0.0
   window_manager: ^0.3.7
+  easy_splash_screen: ^1.0.4
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
