--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,6 @@ dependencies:
   sqflite: ^2.3.0
   path: ^1.8.3
   image_picker: ^1.0.4
-  intl: ^0.18.1
   dio: ^5.3.3
   dio_cookie_manager: ^3.1.1
   cookie_jar: ^4.0.8
@@ -42,8 +41,8 @@ dependencies:
   provider: ^6.0.5
   flutter_slidable: ^3.0.0
   window_manager: ^0.3.7
-  easy_splash_screen: ^1.0.4
   path_provider: ^2.1.1
+  go_router: ^12.0.3
 
 dev_dependencies:
   flutter_test:
