--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,18 +30,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  path: ^1.8.3
+
+  path: ^1.9.0
   image_picker: ^1.0.4
   provider: ^6.0.5
-  path_provider: ^2.1.4
+  path_provider: ^2.1.5
   go_router: ^14.2.8
-  uuid: ^4.5.0
   flutter_launcher_icons: ^0.14.1
+  drift: ^2.26.1
+  drift_flutter: ^0.2.4
+  json_annotation: ^4.9.0
+  json_serializable: ^6.9.5
+  sqlite3: ^2.7.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.3.3
+  build_runner: ^2.4.15
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -49,6 +54,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  drift_dev: ^2.26.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -62,9 +68,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/icon/icon.png
+    - assets/diet_tracker_db.sqlite
+    - assets/base_products.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
