--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,8 @@ dependencies:
   image_picker: ^1.0.4
   provider: ^6.0.5
   path_provider: ^2.1.5
-  go_router: ^14.2.8
-  flutter_launcher_icons: ^0.14.1
+  go_router: ^15.1.2
+  flutter_launcher_icons: ^0.14.3
   drift: ^2.26.1
   drift_flutter: ^0.2.4
   json_annotation: ^4.9.0
@@ -53,7 +53,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
   drift_dev: ^2.26.1
 
 # For information on the generic Dart part of this file, see the
@@ -69,10 +69,13 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/icon/icon.png
-    - assets/diet_tracker_db.sqlite
     - assets/base_products.json
 
+
+flutter_icons:
+  image_path: 'assets/icon.png'
+  android: true
+  ios: true
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
